# Skyline

./: .gitignore  Cargo.toml  Example.jsonc  Example.php  PROTOCOL.md  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
client/: Cargo.toml
docs/: README.md  index.html  sidebar.md
docs/protocol/: README.md
docs/protocol/skyline/: README.md
docs/protocol/tcp/: README.md
docs/protocol/udp/: PACKETS.md  README.md
docs/scripts/: generate-packets.mjs
php/: composer.json
php-client/: .gitignore
protocol/: Cargo.toml
protocol/src/: lib.rs  util.rs
protocol/src/dataset/queue/: mod.rs  split.rs
protocol/src/net/: mod.rs  offline.rs  types.rs
protocol/src/net/online/: ack.rs  dataset.rs  mod.rs
protocol/src/net/skyline/: channel.rs  mod.rs
protocol/src/net/skyline/channel/: mod.rs  packets.rs
protocol/src/net/tcp/: mod.rs
protocol/src/net/udp/: mod.rs
protocol/src/net/udp/proto/: mod.rs  offline.rs  types.rs
protocol/src/net/udp/proto/online/: ack.rs  dataset.rs  mod.rs
protocol/src/net/udp/queue/: mod.rs  ord.rs  recv.rs  send.rs  split.rs  window.rs
protocol/src/net/udp/types/: mod.rs  sized_vec.rs
protocol/src/queue/: ord.rs  recovery.rs  recv.rs  send.rs  split.rs  window.rs
protocol/src/skyline/: mod.rs
protocol/src/skyline/api/: mod.rs  types.rs  value.rs
protocol/src/skyline/channel/: api.rs  mod.rs  packets.rs
protocol/src/skyline/compression/: mod.rs
protocol/src/skyline/connection/: mod.rs
protocol/src/skyline/scaling/: mod.rs  shard.rs
protocol/src/skyline/service/: mod.rs
protocol/src/types/: mod.rs  sized_vec.rs
server/: Cargo.toml  README.md
server/resources/: .env.example  channels.yaml  config.yaml
server/src/: config.rs  main.rs  peer.rs  utils.rs
server/src/channel/: mod.rs
server/src/net/: conn.rs  listener.rs  mod.rs
server/src/net/tcp/: conn.rs  mod.rs
server/src/net/udp/: conn.rs  listener.rs
server/src/peer/: manager.rs  mod.rs
server/src/protocol/: dataset.rs  handshake.rs  mod.rs  types.rs
server/src/protocol/dataset/queue/: split.rs
server/src/protocol/net/: mod.rs
server/src/protocol/net/online/: dataset.rs  mod.rs
server/src/server/: mod.rs
skyline/: Cargo.toml  README.md
skyline/src/: lib.rs  utils.rs
skyline/src/api/: mod.rs
skyline/src/api/channel/: channel.rs  client.rs  mod.rs  server.rs
skyline/src/api/layer/: client.rs  mod.rs
skyline/src/client/: mod.rs
skyline/src/net/: mod.rs
skyline/src/net/tcp/: conn.rs  mod.rs
skyline/src/net/udp/: conn.rs  listener.rs
