[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = { path = '../skyline' }
protocol = { path = "../protocol" }
binary-util = { workspace = true }
tokio = { workspace = true }