[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-util = { git = "https://github.com/NetrexMC/binary-utils.git", branch = "master" }
tokio = { version = "1.27.0", features = ["net"] }

# [dev-dependencies]
# tokio = { version = "1.27.0", features = ["full"] }