[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[features]
udp = []
tcp = []
default = ["tcp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-util = { workspace = true }
tokio = { workspace = true }

# [dev-dependencies]
# tokio = { version = "1.27.0", features = ["full"] }