[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Allows using the skyline `UdpListener` and `UdpSocket`.
# This is more efficient but the API is less ergonomic, and not final yet.
udp = []
# Allows using the skyline `TcpListener` and `TcpStream`.
# This has the same tradeoffs as the `udp` feature, but is more stable (at the current time).
tcp = []
# This is the default feature set, this is stable but not as efficient.
default = ["tcp"]

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
protocol = { path = "../protocol" }
binary-util = { git = "https://github.com/NetrexMC/binary-utils.git", branch = "master" }
async-trait = "0.1.73"
