[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Allows using the skyline `UdpListener` and `UdpSocket`.
# This is more efficient but the API is less ergonomic, and not final yet.
udp = []
# Allows using the skyline `TcpListener` and `TcpStream`.
# This has the same tradeoffs as the `udp` feature, but is more stable (at the current time).
tcp = []
# Allows displaying of debug information.
debug = []
# This is the default feature set, this is stable but not as efficient.
default = ["tcp"]

[dependencies]
tokio = { workspace = true }
skyline = { path = '../skyline' }
protocol = { path = "../protocol" }
binary-util = { workspace = true }
async-trait = { workspace = true }
async-recursion = { workspace = true }
dotenv = { workspace = true }
relative-path = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
colored = { workspace = true }
ctrlc = "3.4.1"
