[package]
name = "skyline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
protocol = { path = "../protocol" }
binary-util = { git = "https://github.com/NetrexMC/binary-utils.git", branch = "master" }
async-trait = "0.1.73"
async-recursion = "1.0.5"
colored = "2"
anyhow = "1.0.79"
